Improve Oracle JDBC OCI analysis.